[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/basic_buggy.glb" type="PackedScene" id=1]
[ext_resource path="res://vehicles/buggy.gd" type="Script" id=3]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.910377, 0.990909 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.521885, 0.334919, 1.78849 )

[node name="buggy" instance=ExtResource( 1 )]
script = ExtResource( 3 )
power_curve = SubResource( 2 )

[node name="chassis" parent="." index="0"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0.446435, 0 )

[node name="front_left" parent="." index="1"]
use_as_traction = true
use_as_steering = true
wheel_radius = 0.6
wheel_rest_length = 0.4
suspension_travel = 1.0
suspension_max_force = 10000.0

[node name="CollisionShape" type="CollisionShape" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.23227, 0 )
shape = SubResource( 1 )

[node name="rear_left" parent="." index="4"]
use_as_traction = true
wheel_radius = 0.6
wheel_rest_length = 0.4
suspension_travel = 1.0
suspension_max_force = 10000.0

[node name="front_right" parent="." index="5"]
use_as_traction = true
use_as_steering = true
wheel_radius = 0.6
wheel_rest_length = 0.4
suspension_travel = 1.0
suspension_max_force = 10000.0

[node name="rear_right" parent="." index="6"]
use_as_traction = true
wheel_radius = 0.6
wheel_rest_length = 0.4
suspension_travel = 1.0
suspension_max_force = 10000.0

[node name="Info" type="Label" parent="." index="7"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}
